# engsoft-codecraft

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
src/: Dockerfile  docker-compose.yml  index.html
src/apps/: __init__.py
src/apps/authentication/: __init__.py  apps.py  models.py  urls.py  views.py
src/apps/core/: __init__.py  apps.py  urls.py  views.py
src/apps/dashboard/: __init__.py  apps.py  urls.py  views.py
src/apps/games/: __init__.py  apps.py  models.py  urls.py  views.py
src/codecraft/: asgi.py  urls.py  wsgi.py
src/codecraft/settings/: __init__.py  base.py  development.py  production.py  test.py
src/templates/: base.html
src/templates/authentication/: login.html
src/templates/dashboard/: home.html
